# simd

./: CMakeLists.txt  README.md
include/simd/: avx.hpp  sse.hpp
src/: simd.cpp
src/test/: Mandelbrot.hpp  TestSIMD.hpp
